...

    <string name="action_settings">Configurações</string>

    <string name="logout_text">Sair</string>

    <string name="register_user">Cadastro Usuário</string>
    <string name="save">Salvar</string>
    <string name="atualizar">Atualizar</string>
    <string name="cancel">Cancelar</string>

    <string name="entrar">Entrar</string>
    <string name="recuperar_senha">Recuperar senha</string>

    <string name="alter_senha">Caso altere a senha, ocorrerá logout em sua conta.</string>
    <string name="menu_adicionar">Adicionar</string>
    <string name="menu_adicionar_propriedade">Adicionar uma propriedade</string>
    <string name="menu_adicionar_animal">Adicionar um animal</string>
    <string name="menu_visualizar_animais">Visualizar animais</string>
    <string name="menu_historico">Ver histórico de dados</string>
    <string name="menu_excluir">Excluir</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_relatorio">Relatório</string>

    <string name="link_novo_cadastro">Não é cadastrado? <b>Crie sua conta</b></string>
    <string name="link_esqueceu_senha">Esqueceu sua senha?</string>

...
    <string name="campo_eec">eec</string>
    <string name="campo_eec1">1</string>
    <string name="campo_eec2">2</string>
    <string name="campo_eec3">3</string>
    <string name="campo_eec4">4</string>
    <string name="campo_eec5">5</string>
    <string name="campo_pastando">Pastando</string>
    <string name="campo_lactacao">Lactação</string>
    <string name="campo_gestante">Gestante</string>
    <string name="campo_cio">Cio</string>
    <string name="campo_semana_lactacao">Semana de Lactação</string>
    <string name="campo_corrigir">Corrigir</string>
    <string-array name="titulos">
...
    <string name="title_activity_cadastrar_grupo">Novo Grupo</string>
    <string name="campo_observacao">Observações</string>
    <string name="titulo_editar_grupo">Editar Grupo</string>

    <string name="identificador_dieta">Identificador Dieta</string>
    <string name="proteina_bruta">Proteina Bruta da Dieta (em %)</string>
    <string name="adicionar_grupos">Gerenciar Grupos</string>
    <string name="adicionar_animais">Gerenciar Animais</string>
    <string name="adicionar_compostos">Gerenciar Compostos</string>
    <string name="calcular">Calcular</string>
    <string name="titulo_relatorios">Geração de Relatórios</string>

</resources>

