<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela_cadastrarcompostosalimentares"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e4e4"
    android:minHeight="300dp"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:paddingTop="05dp"
    android:weightSum="1"
    tools:context="com.nutricampus.app.activities.CadastrarDietaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_form"
        android:background="@drawable/caixa_arredondada"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_inputs_form"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="@dimen/margin_inputs_form"
                android:layout_weight="0.4">

                <EditText
                    android:id="@+id/input_dieta_identificador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/identificador_dieta"
                    android:inputType="textCapWords"
                    android:nextFocusForward="@+id/input_composto_tipo" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_inputs_form"
                android:layout_marginTop="@dimen/margin_inputs_form"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_dieta_pb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/proteina_bruta"
                    android:inputType="numberDecimal"
                    android:nextFocusForward="@+id/input_composto_mm" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_proprietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:clipToPadding="false"
            android:lineSpacingExtra="10dp"
            android:padding="12dp" />

        <Button
            android:id="@+id/btn_add_grupo_dieta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="addGrupos"
            android:padding="12dp"
            android:text="@string/adicionar_grupos" />
        <Button
            android:id="@+id/btn_add_animais_dieta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="addAnimais"
            android:padding="12dp"
            android:text="@string/adicionar_animais" />

        <Button
            android:id="@+id/btn_add_compostos_dieta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="addCompostos"
            android:padding="12dp"
            android:text="@string/adicionar_compostos" />

        <Button
            android:id="@+id/btn_calcular_dieta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="calcularDieta"
            android:padding="12dp"
            android:text="@string/calcular" />

        <TextView
            android:id="@+id/textview_detalhes_dieta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
